--- a/src/app/(blog)/blog/blog.module.css
+++ b/src/app/(blog)/blog/blog.module.css
@@ -348,6 +348,26 @@
 }
 
 /* Responsive */
+@media (min-width: 769px) and (max-width: 1200px) {
+    .grid {
+        grid-template-columns: repeat(4, 1fr);
+        gap: 1rem;
+    }
+
+    .title {
+        font-size: 1rem;
+    }
+
+    .excerpt {
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        font-size: 0.85rem;
+    }
+}
+
 @media (max-width: 1200px) {
     .articleLayout {
         grid-template-columns: 1fr;
